Release Notes
=============

This document collects changes on a release to release base. For open known issues, please refer to
the bug database on sourceforge. 


Version 0.71
------------

This version incorporates critical fixes for 0.7.

930207 - enums incorrectly mapped to fixed 
929529 - instruction selection raises exception 
929528 - assertion raised in instruction selection 
929526 - assertion failed after function cleanup 
928068 - EGL coverage test fails 
928046 - GL coverage test fails 
923737 - glBindTexture can fail 
863660 - Provide support for meshes (experimental)


Version 0.7
-----------

This version is a major upgrade from version 0.2. Most notably, it provides a first version of the
runtime compiler infrastructure that generates rasterization code on the fly based on the current
settings.

In addition, the following issues are addressed:

864042 - Automatic Mipmap Generation
863653 - Specialized rasterization functions (replace by runtime compiler)
921405 - Clipping Broken


Version 0.2
-----------

This version addresses the following issues:

863630 - Backface culling missing
863633 - Culling and clipping is missing 
863632 - Initialization for multiple processes 
863631 - Mipmapping still needs to be implemented 
863640 - Depth coordinate now handled correctly
863652 - Enhance performanced impact for stencil buffer on pipeline 


Version 0.1
-----------

This is an initial release of the compiled library. Known issues logged into the bug database.